--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<DOCTYPE html>
+<html lang ="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Music Space</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" type="image/jpg" href="images/site-icon.jpg" sizes="16x16">
+</head>
+
+</html>
