add files, change html + css, add font

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html lang ="en">
 
 <head>
@@ -10,5 +10,18 @@
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/jpg" href="images/site-icon.jpg" sizes="16x16">
 </head>
+
+<body bgcolor = "#262626">
+    <header>
+        <div>
+            <nav class="header-nav" data-include="header-nav.partial.html"></nav>
+        </div>
+    </header>
+    <h1 class="title-text">MUSIC SPACE</h1>
+
+
+    
+    <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
+</body>
 
 </html>
