--- a/header-nav.partial.html
+++ b/header-nav.partial.html
@@ -6,4 +6,15 @@
             <li class="header__menu-item"><a href="html/performers.html">PERFORMERS</a></li>
         </ul>
     </div>
+    <div>
+        <button class="sign">SIGN IN</button>
+    </div>
+    <div>
+        <ul class="icons">
+            <li><i class="fab fa-facebook-f"></i></li>
+            <li><i class="fab fa-twitter"></i></li>
+            <li><i class="fab fa-instagram"></i></li>
+            <li><i class="fab fa-youtube"></i></li>
+         </ul>
+    </div>
 </nav>
