--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" type="image/jpg" href="images/site-icon.jpg" sizes="16x16">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
 </head>
 
 <body bgcolor = "#262626">
@@ -18,8 +19,6 @@
         </div>
     </header>
     <h1 class="title-text">MUSIC SPACE</h1>
-
-
     
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
