add background-image, add styles

--- a/header-nav.partial.html
+++ b/header-nav.partial.html
@@ -11,10 +11,10 @@
     </div>
     <div>
         <ul class="icons">
-            <li><i class="fab fa-facebook-f"></i></li>
-            <li><i class="fab fa-twitter"></i></li>
-            <li><i class="fab fa-instagram"></i></li>
-            <li><i class="fab fa-youtube"></i></li>
+            <a href="https://www.facebook.com"><li><i class="fab fa-facebook-f"></i></li></a>
+            <a href="https://twitter.com"><li><i class="fab fa-twitter"></i></li></a>
+            <a href="https://www.instagram.com"><li><i class="fab fa-instagram"></i></li></a>
+            <a href="https://www.youtube.com"><li><i class="fab fa-youtube"></i></li></a>
          </ul>
     </div>
 </nav>
