--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav class="header-nav" data-include="header-nav.partial.html"></nav>
         </div>
     </header>
-    <h1 class="title-text">MUSIC SPACE</h1>
+    <section data-include="html/main-page.partial.html"></section>
     
     <script src="https://unpkg.com/html-data-include@3.3.3/html-data-include.js"></script>
 </body>
