--- a/index.html
+++ b/index.html
@@ -37,8 +37,13 @@
 
 			<div class="frame">
 				<div class="frame__content text-right">
-					<h3>Otagi Nengushi</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur elit adipisicing. Nemo fugit, rerum dolorem assumenda consequatur dicta error iure laboriosam temporibus.</p>
+					<h3>Otagi Nenbutsu-ji</h3>
+					<p>Otagi Nenbutsu-ji Temple
+						Otagi Nenbutsu-ji is a temple on the outskirts of Arashiyama with a collection of 1200 unique and whimsical statues. 
+						It’s a rarely visited and interesting place that rewards the adventurous visitor. Otagi Nenbutsu-ji Temple is hidden 
+						in the hills in far western Arashiyama. It is most famous for its collection of 1200 Rakan statues that represent the
+						disciples of the historical Buddha. These statues are a relatively recent addition to a temple, which has a long and 
+						rather unfortunate history...</p>
 				</div>
 			</div>
 
@@ -50,6 +55,15 @@
 
 			<div class="frame"></div>
 
+			<div class="frame">
+				<div class="frame__content text-left">
+					<h3>Fushimi Inari-taisha</h3>
+					<p>Fushimi Inari-taisha (Japanese: 伏見稲荷大社) is the head shrine of the kami Inari, located in Fushimi-ku, Kyoto, Kyoto Prefecture, Japan. 
+						The shrine sits at the base of a mountain, also named Inari, which is 233 metres (764 ft) above sea level, and includes trails up the mountain 
+						to many smaller shrines which span 4 kilometres (2.5 mi) and take approximately 2 hours to walk up...</p>
+				</div>
+			</div>
+
 			<div class="frame frame_bg">
 				<div class="frame__content">
 					<div class="frame-media frame-media_right" style="background-image: url(images/3.jpg)"></div>
@@ -59,32 +73,47 @@
 			<div class="frame"></div>
 
 			<div class="frame">
-				<div class="frame__content text-left">
-					<h3>Kikan ku-ji</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur elit. Rerum dolorem assumenda consequatur dicta error iure laboriosam temporibus omnis quae eaque aliquam esse unde accusamus dolores non soluta.</p>
+				<div class="frame__content text-right">
+					<h3>Kinkaku-ji</h3>
+					<p>Kinkaku-ji (金閣寺, lit. 'Temple of the Golden Pavilion'), officially named Rokuon-ji (鹿苑寺, lit. 'Deer Garden Temple'), is a Zen Buddhist temple in Kyoto, Japan.
+						It is one of the most popular buildings in Kyoto, attracting many visitors annually.[3] It is designated as a National Special Historic Site, a National Special 
+						Landscape and is one of 17 locations making up the Historic Monuments of Ancient Kyoto which are World Heritage Sites...</p>
 				</div>
 			</div>
 
 			<div class="frame frame_bg">
 				<div class="frame__content">
-					<div class="frame-media frame-media_right" style="background-image: url(images/4.jpg)"></div>
+					<div class="frame-media frame-media_left" style="background-image: url(images/4.jpg)"></div>
 				</div>
 			</div>
+			
+			<div class="frame"></div>
 
 			<div class="frame">
 				<div class="frame__content">
-					<video class="frame-media frame-media_left" src="media/video_optimized.mp4" autoplay loop muted></video>
+					<video class="frame-media frame-media_right" src="media/video_optimized.mp4" autoplay loop muted></video>
 				</div>
 			</div>
 
 			<div class="frame"></div>
-			<div class="frame"></div>
+
+			<div class="frame">
+				<div class="frame__content text-left">
+					<h3>Kiyomizu-dera</h3>
+					<p>Kiyomizu-dera (Japanese: 清水寺, lit. 'Pure Water Monastery') is a Buddhist temple located in eastern Kyoto, Japan. The temple is part of the Historic Monuments 
+						of Ancient Kyoto UNESCO World Heritage Site. The temple was established in 778, during the late Nara period, by Enchin Shonin, who was a priest from Nara 
+						(the capital of Japan from 710 to 784). He is said to have received a vision telling him to construct the temple next to the Otowa spring.</p>
+				</div>
+			</div>
 
 			<div class="frame frame_bg">
 				<div class="frame__content">
 					<div class="frame-media frame-media_right" style="background-image: url(images/5.jpg)"></div>
 				</div>
 			</div>
+
+			<div class="frame"></div>
+			<div class="frame"></div>
 
 			<div class="frame frame_bg">
 				<div class="frame__content">
@@ -96,7 +125,7 @@
 			<div class="frame"></div>
 
 			<div class="frame">
-				<div class="frame__content">© Lililia </div>
+				<div class="frame__content">© Liliia Dokuchai </div>
 			</div>
 
 		</section>
