--- a/index.html
+++ b/index.html
@@ -32,9 +32,13 @@
 					<video class="frame-media frame-media_right" src="media/video_optimized.mp4" autoplay loop muted></video>
 				</div>
 			</div>
-
-			<div class="frame"></div>
-
+			
+			<div class="frame"><a href="#"><p class ="invisiblity" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+				incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+				ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+				Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, 
+				quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p></a></div>
+			
 			<div class="frame">
 				<div class="frame__content text-right">
 					<h3>Otagi Nenbutsu-ji</h3>
@@ -46,14 +50,18 @@
 						rather unfortunate history...</p>
 				</div>
 			</div>
-
+			
 			<div class="frame frame_bg">
 				<div class="frame__content">
 					<div class="frame-media frame-media_left" style="background-image: url(images/2.jpg)"></div>
 				</div>
 			</div>
-
-			<div class="frame"></div>
+			</a>
+			<div class="frame"><a href="#"><p class ="invisiblity" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+				incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+				ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+				Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, 
+				quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p></a></div>
 
 			<div class="frame">
 				<div class="frame__content text-left">
@@ -70,7 +78,11 @@
 				</div>
 			</div>
 
-			<div class="frame"></div>
+			<div class="frame"><a href="#"><p class ="invisiblity" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+				incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+				ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+				Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, 
+				quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p></a></div>
 
 			<div class="frame">
 				<div class="frame__content text-right">
@@ -95,7 +107,11 @@
 				</div>
 			</div>
 
-			<div class="frame"></div>
+			<div class="frame"><a href="#"><p class ="invisiblity" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
+				incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
+				ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+				Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa, 
+				quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p></a></div>
 
 			<div class="frame">
 				<div class="frame__content text-left">
@@ -112,7 +128,6 @@
 				</div>
 			</div>
 
-			<div class="frame"></div>
 			<div class="frame"></div>
 
 			<div class="frame frame_bg">
